--- a/config/chips/v536/configs/Lindenis_SOM/linux/image_linux.cfg
+++ b/config/chips/v536/configs/Lindenis_SOM/linux/image_linux.cfg
@@ -1,10 +1,10 @@
 ;/**************************************************************************/
 ;2010-06-09
 ;Sam
-;image>配置文件内容
+;image> Configuration File Content
 ;/**************************************************************************/
 
-;主要类型 8字节字符串
+; Main Types (8-byte strings)
 [MAIN_TYPE]
 ITEM_COMMON         = "COMMON  "
 ITEM_INFO           = "INFO    "
@@ -33,31 +33,31 @@ ITEM_AUDIO          = "AUDIO   "
 ITEM_VIDEO          = "VIDEO   "
 ITEM_APPLICATION    = "APP     "
 
-;子类型格式，供参考，可以另外定义，最大长度必须为16字节
+; Subtype format, for reference, can be defined separately, maximum length must be 16 bytes
 [SUB_TYPE]
 SUBTYPEdemo1 = "071228HWSXXXX100"
 ;-->071228 2007-12-28
 ;-->HWS hardware scan
-;-->XXXX 用户定义
+;-->XXXX user-defined
 ;-->100 version 1.00
 
-;路径定义
+; Path Definition
 [DIR_DEF]
 INPUT_DIR = "..\\"
 
-;文件列表
+; File List
 [FILELIST]
-;----------------------------------------------------maintype与subtype不可改变----------------------------------------------;
-    ;-------------------------------公共部分---------------------------------------;
+;----------------------------------------------------maintype and subtype should not be changed----------------------------------------------;
+    ;-------------------------------Common Part---------------------------------------;
 
-    ;-->固定不变的
+    ;-->Fixed, unchanging files
     {filename = "sys_config.fex",   maintype = ITEM_COMMON,       subtype = "SYS_CONFIG100000",},
     {filename = "config.fex",       maintype = ITEM_COMMON,       subtype = "SYS_CONFIG_BIN00",},
     {filename = "split_xxxx.fex",   maintype = ITEM_COMMON,       subtype = "SPLIT_0000000000",},
     {filename = "sys_partition.fex",maintype = ITEM_COMMON,       subtype = "SYS_CONFIG000000",},
     {filename = "sunxi.fex",        maintype = ITEM_COMMON,       subtype = "DTB_CONFIG000000",},
 
-    ;-->boot文件
+    ;-->Boot files
     {filename = "boot0_sdcard.fex", maintype = "12345678",        subtype = "1234567890BOOT_0",},
     {filename = "boot0_spinor.fex", maintype = "12345678",        subtype = "1234567890BNOR_0",},
     {filename = "u-boot.fex",       maintype = "12345678",        subtype = "UBOOT_0000000000",},
@@ -68,36 +68,36 @@ INPUT_DIR = "..\\"
 
     {filename = "boot_package.fex", maintype = "12345678",        subtype = "BOOTPKG-00000000",},
     {filename = "boot_package_nor.fex", maintype = "12345678",    subtype = "BOOTPKG-NOR00000",},
-    ;-------------------------------usb量产部分-------------------------------------;
-    ;-->tools文件
+    ;-------------------------------USB Production Part-------------------------------------;
+    ;-->Tools files
     {filename = "usbtool.fex",      maintype = "PXTOOLSB",        subtype = "xxxxxxxxxxxxxxxx",},
     {filename = "usbtool_crash.fex",maintype = "PXTOOLCH",        subtype = "xxxxxxxxxxxxxxxx",},
     {filename = "aultools.fex",     maintype = "UPFLYTLS",        subtype = "xxxxxxxxxxxxxxxx",},
     {filename = "aultls32.fex",     maintype = "UPFLTL32",        subtype = "xxxxxxxxxxxxxxxx",},
 
-    ;-------------------------------卡量产部分----------------------------------------;
-    ;-->固定不变的PC使用
+    ;-------------------------------Card Production Part----------------------------------------;
+    ;-->Fixed files for PC usage
     {filename = "cardtool.fex",     maintype = "12345678",        subtype = "1234567890cardtl",},
     {filename = "cardscript.fex",   maintype = "12345678",        subtype = "1234567890script",},
 
-    ;-->需要烧写到卡上的文件
+    ;-->Files to be written to the card
     {filename = "sunxi_mbr_nor.fex",   maintype = "12345678",        subtype = "1234567890___MBR",},
     {filename = "dlinfo.fex",          maintype = "12345678",        subtype = "1234567890DLINFO",},
     {filename = "arisc.fex",           maintype = "12345678",        subtype = "1234567890ARISC" ,},
-    ;-------------------------------其他----------------------------------------------;
+    ;-------------------------------Others----------------------------------------------;
 
-;-------------------------------------------maintype与subtype不可改变-------------------------------------------------------;
+;-------------------------------------------maintype and subtype should not be changed-------------------------------------------------------;
 
-;镜像配置信息
+; Image Configuration Information
 [IMAGE_CFG]
-version = 0x100234                ;-->Image的版本
-pid = 0x00001234                  ;-->产品ID
-vid = 0x00008743                  ;-->供应商ID
-hardwareid = 0x100                ;-->硬件ID bootrom
-firmwareid = 0x100                ;-->固件ID bootrom
+version = 0x100234                ;-->Image version
+pid = 0x00001234                  ;-->Product ID
+vid = 0x00008743                  ;-->Vendor ID
+hardwareid = 0x100                ;-->Hardware ID bootrom
+firmwareid = 0x100                ;-->Firmware ID bootrom
 bootromconfig = "bootrom_071203_00001234.cfg"
 rootfsconfig = "rootfs.cfg"
 ;;imagename = "ePDKv100_nand.img"
 filelist = FILELIST
 imagename = ..\sun4i_test_evb.img
-encrypt = 0		;-->如果不需要加密将此项设置为0	，否则设置为1
+encrypt = 0		;-->Set this to 0 if no encryption is needed, otherwise set it to 1
